<resources>
    <string name="app_name">IPv4 Subnet Calculator</string>
    <string name="slash">/</string>
    <string name="to_cheatsheet">Host Lookup</string>
    <string name="update">Calc</string>
    <string name="enter_ip">IP</string>
    <string name="splitter_netmask">Current NetMask</string>
    <string name="splitter_ip">Original Ip:</string>
    <string name="splitter_upper"></string>
    <string name="title_activity_description">Description</string>
    <string name="editor_information_placeholder">Editor Information Placeholder</string>
    <string name="dialog_message">Split Builder</string>
    <string name="hosts_tv_ip_item">number of hosts</string>
    <string name="ip_address_title">Ip Address:</string>
    <string name="number_of_hosts_title">Number Of Hosts:</string>
    <string name="netmask_title">Netmask:</string>
    <string name="broadcast_title">Broadcast:</string>
    <string name="address_range_title">Address Range:</string>
    <string name="usable_address_range_title">Usable Address Range:</string>
    <string name="clear">Clear</string>
    <string name="ip_image_content_description">IpImage</string>
    <string name="hosts_cheatsheet_item_tv">number of hosts</string>
    <string name="netmask_cheatsheet_item_tv">netmask</string>
    <string name="bits_cheatsheet_item_tv">bits</string>
    <string name="bits_table_title">Bits</string>
    <string name="usable_hosts_table_title">Usable Hosts</string>
    <string name="netmask_table_title">Netmask</string>
    <string name="help">Help</string>
    <string name="dialog_text_swipe_left">Swipe Left to Merge IP Address with its Pair</string>
    <string name="dialog_text_swipe_right">Swipe Right to Divide IP Address into Two Parts</string>
    <string name="dialog_title">Help!</string>
    <string name="dialog_text_tap">Tap for More Detailed Information about the Network</string>
    <string name="ip_dialog_explanation">Adjusted Ip Dialog Explanation</string>
    <string name="ip_address_label">IP Address</string>
    <string name="mask_bits_label">Mask Bits</string>
    <string name="adjusted_ip_address_label">Adjusted Ip Address</string>
    <string name="original_title_label">Original:</string>
    <string name="adjusted_title_label">Adjusted:</string>
    <string name="ip_address_dialog_label">Ip Address</string>
</resources>
