<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dialog_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/swipe_to_split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/dialog_text_swipe_right"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/swipe_to_merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/dialog_text_swipe_left"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tap_for_more_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/dialog_text_tap"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp" />

</LinearLayout>
