<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/adjusted_ip_address_label"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_ipOgTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="8dp"
            android:text="@string/original_title_label"
            android:gravity="center"
            android:textColor="@color/colorDefaultText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_ipAdjTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/adjusted_title_label"
            android:textColor="@color/colorDefaultText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_originalIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ip_address_dialog_label"
            android:textColor="@color/colorDefaultText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_formattedIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ip_address_dialog_label"
            android:textColor="@color/colorDefaultText"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_adjusted_ip_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/ip_dialog_explanation"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp" />

</LinearLayout>