<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jlrutilities.subnetapp.fragments.MainActivityFragment"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/ipAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/ip_address_label"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/maskBitsLabel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mask_bits_label"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/ipEntryTv"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/enter_ip"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/enter_ip"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/slashTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressLabel" />

    <Button
        android:id="@+id/clearIpInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_button_shape"
        android:minWidth="64dp"
        android:minHeight="48dp"
        android:onClick="clearInput"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/clear"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipEntryTv"
        tools:ignore="OnClick" />

    <Spinner
        android:id="@+id/subnet_spinner"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:minWidth="120dp"
        android:spinnerMode="dropdown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/slashTv"
        app:layout_constraintTop_toBottomOf="@+id/maskBitsLabel" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_button_shape"
        android:minWidth="64dp"
        android:minHeight="48dp"
        android:onClick="subnetTransition"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/update"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearIpInput"
        app:layout_constraintTop_toBottomOf="@+id/ipEntryTv"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/slashTv"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/slash"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/subnet_spinner"
        app:layout_constraintStart_toEndOf="@+id/ipEntryTv"
        app:layout_constraintTop_toBottomOf="@+id/maskBitsLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>