<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customIpListItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="52dp"
    android:gravity="center_vertical"
    android:padding="4dp"
    android:background="@drawable/custom_list_cell_shape">

    <TextView
        android:id="@+id/bitsItemTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bits_cheatsheet_item_tv"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/netmaskItemTv"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/netmaskItemTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/netmask_cheatsheet_item_tv"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hostsItemTv"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@+id/bitsItemTv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hostsItemTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/hosts_cheatsheet_item_tv"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/netmaskItemTv"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>